Created a favorites page and added CSS styling to favorites page.

--- a/home/index.html
+++ b/home/index.html
@@ -30,7 +30,7 @@
         </header>
 
         <main>
-            <section class="hero-section">
+            <section id="hero-section">
                 <h1>
                     <pre>Create Beautiful</pre>
                     <pre>Color Palettes</pre>
@@ -39,7 +39,7 @@
                     code.</p>
             </section>
 
-            <section class="generate-section">
+            <section id="generate-section">
                 <div class="generate-container">
                     <h2>Random Palette Generator</h2>
                     <p>Click generate to discover beautiful color combinations</p>
@@ -49,19 +49,19 @@
                     </button>
                 </div>
                 <div id="palette-container">
-                    <div class="palette-color">#227C9D</div>
-                    <div class="palette-color">#17C3B2</div>
-                    <div class="palette-color">#FFCB77</div>
-                    <div class="palette-color">#FEF9EF</div>
-                    <div class="palette-color">#FE6D73</div>
+                    <div class="palette-color"></div>
+                    <div class="palette-color"></div>
+                    <div class="palette-color"></div>
+                    <div class="palette-color"></div>
+                    <div class="palette-color"></div>
                 </div>
             </section>
 
-            <div class="border">
+            <div id="border">
                 <hr>
             </div>
 
-            <section class="create-section">
+            <section id="create-section">
                 <div class="create-container">
                     <h2>Custom Palette Creator</h2>
                     <p>Build your own color palettes by adding hex colors</p>
@@ -97,14 +97,14 @@
     </div>
 
     <!-- toast blueprint -->
-    <div id="toast">
+    <!-- <div id="toast">
         <div class="toast-icon">
             <i class="fa-solid fa-check"></i>
         </div>
         <div class="toast-content">
             This is a toast message.
         </div>
-    </div>
+    </div> -->
 
     <script src="main.js"></script>
 
