Changed directory of Home Page files Edited links in home and favorites pages

--- a/favorites/index.html
+++ b/favorites/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <nav>
-                <a href="../home/index.html" class="website-name">
+                <a href="../index.html" class="website-name">
                     <div class="website-logo">
                         <img width="40" height="40" src="../paletto-logo-icon.png" alt="color-palette" />
                     </div>
@@ -29,7 +29,7 @@
                     <div class="website-logo-bg">
                         <img width="58" height="58" src="../paletto-logo-bg.png" alt="color-palette" />
                     </div>
-                    <p>Your favorite palettes will appear here. <a href="../home/index.html#border">Create Now!</a></p>
+                    <p>Your favorite palettes will appear here. <a href="../index.html#border">Create Now!</a></p>
                 </div>
             </section>
         </main>
