--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Paletto - The Color Palette Generator You Are Looking For!</title>
-    <link rel="shortcut icon" href="../paletto-logo-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="paletto-logo-icon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/2e12323ded.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,11 +16,11 @@
             <nav>
                 <a href="index.html" class="website-name">
                     <div class="website-logo">
-                        <img width="40" height="40" src="../paletto-logo-icon.png" alt="color-palette" />
+                        <img width="40" height="40" src="paletto-logo-icon.png" alt="color-palette" />
                     </div>
                     <h1>Paletto</h1>
                 </a>
-                <a href="../favorites/index.html" class="favorites-link">
+                <a href="favorites/index.html" class="favorites-link">
                     <button type="button" id="favorites-btn">
                         <i class="fa-solid fa-star"></i>
                         <span>Favorite Palettes</span>
@@ -77,7 +77,7 @@
                 </div>
                 <div id="empty-palette">
                     <div class="website-logo-bg">
-                        <img width="58" height="58" src="../paletto-logo-bg.png" alt="color-palette" />
+                        <img width="58" height="58" src="paletto-logo-bg.png" alt="color-palette" />
                     </div>
                     <p>Your custom palettes will appear here. Start by adding colors!</p>
                 </div>
