--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
                     </button>
                 </div>
                 <div id="palette-container">
-                    <div class="palette-color"></div>
-                    <div class="palette-color"></div>
-                    <div class="palette-color"></div>
-                    <div class="palette-color"></div>
-                    <div class="palette-color"></div>
+                    <div class="palette-color" id="0" onmouseenter="showColorCode(this.id)"
+                        onmouseleave="hideColorCode(this.id)" onclick="copyColorCode(this.id)"></div>
+                    <div class="palette-color" id="1" onmouseenter="showColorCode(this.id)"
+                        onmouseleave="hideColorCode(this.id)" onclick="copyColorCode(this.id)"></div>
+                    <div class="palette-color" id="2" onmouseenter="showColorCode(this.id)"
+                        onmouseleave="hideColorCode(this.id)" onclick="copyColorCode(this.id)"></div>
+                    <div class="palette-color" id="3" onmouseenter="showColorCode(this.id)"
+                        onmouseleave="hideColorCode(this.id)" onclick="copyColorCode(this.id)"></div>
+                    <div class="palette-color" id="4" onmouseenter="showColorCode(this.id)"
+                        onmouseleave="hideColorCode(this.id)" onclick="copyColorCode(this.id)"></div>
                 </div>
             </section>
 
@@ -95,16 +100,6 @@
             </p>
         </footer>
     </div>
-
-    <!-- toast blueprint -->
-    <!-- <div id="toast">
-        <div class="toast-icon">
-            <i class="fa-solid fa-check"></i>
-        </div>
-        <div class="toast-content">
-            This is a toast message.
-        </div>
-    </div> -->
 
     <script src="main.js"></script>
 
