Addded random color and random palette generation functionality.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="generate-container">
                     <h2>Random Palette Generator</h2>
                     <p>Click generate to discover beautiful color combinations</p>
-                    <button type="button" id="generate-btn">
+                    <button type="button" id="generate-btn" onclick="generateRandomPalette()">
                         <i class="fa-solid fa-bolt"></i>
                         <span>Generate New Palette</span>
                     </button>
