Added savePalette() function to save palettes to favorites.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <button type="button" id="add-color-btn" title="Add Color" onclick="addColor()">
                             <i class="fa-solid fa-plus"></i>
                         </button>
-                        <button type="button" id="save-palette-btn" title="Save Palette">
+                        <button type="button" id="save-palette-btn" title="Save Palette" onclick="savePalette()">
                             <i class="fa-solid fa-check"></i>
                         </button>
                     </div>
