Added showFavorites() function to display favorite palettes in Favorites Page. Applied style on Favorites Page. Added remove and edit buttons to palettes. Added showColorCode(), hideColorCode(), copyColorCode(), isLight(), showToast() functions.

--- a/favorites/index.html
+++ b/favorites/index.html
@@ -24,7 +24,7 @@
         </header>
 
         <main>
-            <section class="favorites-section">
+            <section id="favorites-section">
                 <div id="empty-palette">
                     <div class="website-logo-bg">
                         <img width="58" height="58" src="../paletto-logo-bg.png" alt="color-palette" />
@@ -34,16 +34,6 @@
             </section>
         </main>
     </div>
-
-    <!-- toast blueprint -->
-    <!-- <div id="toast">
-            <div class="toast-icon">
-                <i class="fa-solid fa-check"></i>
-            </div>
-            <div class="toast-content">
-                This is a toast message.
-            </div>
-        </div> -->
 
     <script src="main.js"></script>
 
