Added hero section in Favorites Page. Added removePalette() function and edited showFavorites() function to be compatable with it.

--- a/favorites/index.html
+++ b/favorites/index.html
@@ -24,6 +24,14 @@
         </header>
 
         <main>
+            <section id="hero-section">
+                <h1>
+                    <pre>Save Your Favorite</pre>
+                    <pre>Color Palettes</pre>
+                </h1>
+                <p>Save your favorite color palettes here to use them anytime. Click any color to copy its hex
+                    code.</p>
+            </section>
             <section id="favorites-section">
                 <div id="empty-palette">
                     <div class="website-logo-bg">
