--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Paletto - The Color Palette Generator You Are Looking For!</title>
     <link rel="shortcut icon" href="paletto-logo-icon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/2e12323ded.js" crossorigin="anonymous"></script>
